--- a/group_document.qmd
+++ b/group_document.qmd
@@ -10,6 +10,17 @@ editor: visual
 
 # s243252
 
+### New feature - s243252
+
+lorem ipsum
+
+```{r}
+#| echo: false
+#| label: s243252
+
+print("hello")
+```
+
 # s201902
 
 # s204655
