New feature from 242830

--- a/group_document.qmd
+++ b/group_document.qmd
@@ -20,6 +20,12 @@ Jeg er Antoine
 print("Hello world")
 ```
 
+## New feature
+
+```{r}
+print("Jeg kommer fra Frankrig")
+```
+
 # s243252
 
 ### New feature - s243252
