--- a/group_document.qmd
+++ b/group_document.qmd
@@ -47,6 +47,19 @@ Amy's section
 3*6
 ```
 
+## New Analysis
+
+New analysis...
+
+```{r}
+cats <- 2
+dogs <- 5
+```
+
+```{r}
+print(paste("There are",cats,"cats and",dogs,"dogs"))
+```
+
 # s204655
 
 This is x
