--- a/assignement_lab07.qmd
+++ b/assignement_lab07.qmd
@@ -9,7 +9,9 @@ editor: visual
 
 ## Data
 
-The data we are using in this exercise comes from a paper from Gravier et al. (2020) and is available here: <https://github.com/ramhiser/datamicroarray/raw/master/data/gravier.RData>.
+We’ll be analyzing the `biopsy` dataset, which comes originally from the MASS package. It is a breast cancer dataset from the University of Wisconsin Hospitals, Madison from Dr. William H. Wolberg. He assessed biopsies of breast tumors for 699 patients; each of nine attributes was scored on a scale of 1 to 10. The true outcome (benign/malignant) is also known.
+
+The data is available there: <https://wilkelab.org/classes/SDS348/data_sets/biopsy.csv>
 
 ## Load Libraries
 
@@ -17,8 +19,6 @@ The data we are using in this exercise comes from a paper from Gravier et al. (2
 #| message: False
 
 library("tidyverse")
-library("broom")
-library("ggrepel")
 ```
 
 ## Load data
