--- a/assignement_lab07.qmd
+++ b/assignement_lab07.qmd
@@ -17,6 +17,8 @@ The data we are using in this exercise comes from a paper from Gravier et al. (2
 #| message: False
 
 library("tidyverse")
+library("broom")  # devtools::install_github("tidymodels/broom")
+library("cowplot")
 ```
 
 ## Load data
@@ -39,4 +41,54 @@ if( !file.exists(str_c(raw_dir, data_file)) ){
 load(file = str_c(raw_dir, data_file))
 ```
 
-\
+## Analyse data
+
+We convert the data to tibble
+
+```{r}
+gravier_tibble <- gravier |>
+  bind_cols() |> 
+  as_tibble()
+```
+
+## Look at the data in PC coordinates
+
+We start by running the PCA and storing the result in a variable `pca_fit`. There are two issues to consider here. First, the `prcomp()` function can only deal with numeric columns, so we need to remove all non-numeric columns from the data. This is straightforward using the `where(is.numeric)` tidyselect construct. Second, we normally want to scale the data values to unit variance before PCA. We do so by using the argument `scale = TRUE` in `prcomp()`.
+
+```{r}
+pca_fit <- gravier_tibble |> 
+  select(where(is.numeric))  |>  # retain only numeric columns
+  prcomp(scale = TRUE) # do PCA on scaled data
+```
+
+Now, we want to plot the data in PC coordinates. In general, this means combining the PC coordinates with the original dataset, so we can color points by categorical variables present in the original data but removed for the PCA.
+
+```{r}
+pca_fit |> 
+  augment(gravier_tibble) |> 
+  ggplot(aes(x = .fittedPC1, y = .fittedPC2, color = y)) + 
+  geom_point(size = 1.5) +
+  labs(color = "Condition",
+       x = "PC1",
+       y = "PC2")
+```
+
+## Look at the variance explained by each PC
+
+Finally, we’ll plot the variance explained by each PC. We can again extract this information using the `tidy()` function from broom, now by setting the `matrix` argument to `matrix = "eigenvalues"`.
+
+```{r}
+pca_fit %>%
+  tidy(matrix = "eigenvalues") %>%
+  ggplot(aes(PC, percent)) +
+  geom_col(fill = "#56B4E9", alpha = 0.8) +
+  scale_y_continuous(
+    labels = scales::percent_format(),
+    expand = expansion(mult = c(0, 0.01))
+  ) +
+  theme_minimal_hgrid(12)
+```
+
+## Conclusion
+
+In the gravier dataset, we have too many genes to extract relevant information with PCA. We should probably extract only significant genes first and repeat the same analysis.
