--- a/assignement_lab07_1.qmd
+++ b/assignement_lab07_1.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 7 Assignement: Group 20"
-author: Antoine Andréoletti (s242830), Olivier Gaufrès (243252), Amy Surry (201902), Lea Skytthe (s203531), Trine Søgaard (s204655)
+author: Antoine Andréoletti (s242830), Olivier Gaufrès (s243252), Amy Surry (s201902), Lea Skytthe (s203531), Trine Søgaard (s204655)
 format:
   html:
     embed-resources: true
@@ -17,6 +17,7 @@ The data we are using in this exercise comes from a paper from Gravier et al. (2
 #| message: False
 
 library("tidyverse")
+library("broom")
 library("cowplot")
 ```
 
